methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:2: error: type YELLOW is not a member of object java.awt.Color
  faireV(c:Color.YELLOW);
                 ^MethodsPicture:2: error: not found: value c
  faireV(c:Color.YELLOW);
         ^MethodsPicture:3: error: type RED is not a member of object java.awt.Color
  faireV(c:Color.RED);
                 ^MethodsPicture:3: error: not found: value c
  faireV(c:Color.RED);
         ^MethodsPicture:4: error: type BLUE is not a member of object java.awt.Color
  faireV(c:Color.BLUE);
                 ^MethodsPicture:4: error: not found: value c
  faireV(c:Color.BLUE);
         ^MethodsPicture:5: error: type GREEN is not a member of object java.awt.Color
  faireV(c:Color.GREEN);
                 ^MethodsPicture:5: error: not found: value c
  faireV(c:Color.GREEN);
         ^